--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "cypress": "^12.12.0"
+    "cypress": "^12.12.0",
+    "start-server-and-test": "^2.0.0"
   }
 }
