--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
-    "component": "cypress open --component",
-    "component:headless": "cypress run --component"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -29,7 +26,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "cypress": "^12.12.0",
-    "start-server-and-test": "^2.0.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
